--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -81,7 +81,7 @@ $success: #7952b3;
 @import "icon-list";
 
 body {
-  padding: 3rem 1.5rem;
+  //padding: 3rem 1.5rem;
 }
 
 // Style Bootstrap icons
